[fixed] add minHeight for week view overflow
fixes #35

--- a/src/less/time-grid.less
+++ b/src/less/time-grid.less
@@ -19,6 +19,7 @@
   flex: 1;
   width: 100%;
   border: 1px solid @calendar-border;
+  min-height: 0;
 
   .rbc-time-gutter {
     white-space: nowrap;
